--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "babel-core": "^6.3.21",
     "babel-loader": "^6.2.0",
     "babel-plugin-react-transform": "^1.1.1",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
     "component-webpack-plugin": "^0.2.1",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^0.9.1",
