--- a/package.json
+++ b/package.json
@@ -17,16 +17,21 @@
   "dependencies": {
     "@cycle/core": "^6.0.0",
     "@cycle/dom": "^8.0.0",
+    "ramda": "^0.19.0",
     "rx": "^4.0.7"
   },
   "devDependencies": {
     "babel-core": "^6.3.21",
+    "babel-eslint": "^4.1.6",
     "babel-loader": "^6.2.0",
     "babel-plugin-react-transform": "^1.1.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "component-webpack-plugin": "^0.2.1",
     "css-loader": "^0.23.1",
+    "eslint": "^1.10.3",
+    "eslint-loader": "^1.1.1",
+    "eslint-plugin-react": "^3.12.0",
     "extract-text-webpack-plugin": "^0.9.1",
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^1.7.0",
