--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_ENV=dev webpack-dev-server"
+    "start": "NODE_ENV=dev webpack-dev-server",
+    "prebuild": "rm -rf ./public",
+    "build": "NODE_ENV=dev webpack -p"
   },
   "keywords": [
     "Cycle.js",
