--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@cycle/core": "^6.0.0",
     "@cycle/dom": "^8.0.0",
+    "@cycle/isolate": "^1.1.1",
     "ramda": "^0.19.0",
     "rx": "^4.0.7"
   },
