--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@cycle/core": "^6.0.0",
     "@cycle/dom": "^8.0.0",
     "@cycle/isolate": "^1.1.1",
+    "babel-polyfill": "^6.3.14",
     "ramda": "^0.19.0",
     "rx": "^4.0.7"
   },
