package.json tweaks

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cycle-through",
+  "name": "cyclejs-mortgage-calculator",
   "version": "0.0.1",
   "private": true,
   "description": "Example of a cycle.js app",
