--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@cycle/dom": "^8.0.0",
     "@cycle/isolate": "^1.1.1",
     "babel-polyfill": "^6.3.14",
+    "cardinalcss": "^3.3.0",
     "ramda": "^0.19.0",
     "rx": "^4.0.7"
   },
